# Q_vedio_record

./: .gitignore  CMakeLists.txt  README.md  baudio.h  bvedio.cpp  bvedio.h  dx_capture.hpp  encodeAudio.h  global_config.cpp  global_config.h  icon.qrc  main.cpp  main_dia.cpp  main_dia.ui  main_diat.h  q_circle_buffer.hpp  q_grab_windows.cpp  q_grab_windows.h  q_write_queue.hpp  rec_setting.cpp  rec_setting.h  rec_setting.ui  utils.hpp  vedio_frame_chain.cpp  vedio_frame_chain.h  vedio_meta.cpp  vedio_meta.h  vedio_rec_zh_CN.ts  vedio_record.hpp
